# openpathsampling-cli

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  autorelease-env.sh  autorelease_check.py  setup.cfg  setup.py
.autorelease/: test-testpypi.sh
.github/workflows/: autorelease-deploy.yml  autorelease-gh-rel.yml  autorelease-prep.yml  test-suite.yml
devtools/: miniconda_install.sh  tests_require.txt
docs/: .gitignore  compiling.rst  conf.py  full_cli.rst  index.rst  interpretation.rst  parameters.rst  plugins.rst  requirements.txt  wizard.rst  workflows.rst
docs/api/: index.rst
docs/for_core/: README.md  cli.rst
docs/sphinx-helpers/: make_param_table.py
example_plugins/: README.md  one_pot_tps.py  tps.py
paths_cli/: __init__.py  cli.py  errors.py  file_copying.py  param_core.py  parameters.py  plugin_management.py  utils.py
paths_cli/commands/: append.py  bootstrap_init.py  compile.py  contents.py  equilibrate.py  info.py  load_trajectory.py  md.py  pathsampling.py  strip_snapshots.py  visit_all.py  wizard.py
paths_cli/compat/: openmm.py
paths_cli/compiling/: __init__.py  core.py  cvs.py  engines.py  errors.py  gendocs.py  json_type.py  networks.py  plugins.py  root_compiler.py  schemes.py  shooting.py  strategies.py  tools.py  topology.py  volumes.py
paths_cli/parsing/: core.py  cvs.py  engines.py  errors.py  networks.py  plugins.py  root_parser.py  schemes.py  shooting.py  strategies.py  test_core.py  test_cvs.py  test_engines.py  test_topology.py  test_volumes.py  tools.py  topology.py  volumes.py
paths_cli/tests/: conftest.py  (+7 more)
(+86 files in other folders)
