[metadata]
name = openpathsampling-cli
version = 0.2.0.dev0
# version should end in .dev0 if this isn't to be released
description = Command line tool for OpenPathSampling
long_description = file: README.md
long_description_content_type = text/markdown
author = David W.H. Swenson
author_email = dwhs@hyperblazer.net
license = MIT
license-file = LICENSE
url = https://github.com/openpathsampling/openpathsampling-cli
classifiers = 
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.6
install_requires =
    click
    tqdm
    openpathsampling >= 1.2
packages = find:

[options.entry_points]
console_scripts = 
    openpathsampling = paths_cli.cli:main

[bdist_wheel]
universal=1
